--- a/projeto-backend/src/main/webapp/WEB-INF/web.xml
+++ b/projeto-backend/src/main/webapp/WEB-INF/web.xml
@@ -13,25 +13,31 @@
 		<welcome-file>default.htm</welcome-file>
 	</welcome-file-list>
 
-	<servlet>
-		<servlet-name>ServletAdaptor</servlet-name>
-		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
-		<init-param>
-			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>resource</param-value>
-		</init-param>
-		<init-param>
-			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
-			<param-value>true</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>ServletAdaptor</servlet-name>
-		<url-pattern>/rest/*</url-pattern>
-	</servlet-mapping>
-	<session-config>
-		<session-timeout>30</session-timeout>
-	</session-config>
-
+ <servlet>
+  	<servlet-name>ServletAdaptor</servlet-name>
+  	<servlet-class>
+  		org.glassfish.jersey.servlet.ServletContainer
+  	</servlet-class>
+  	<init-param>
+  		<param-name>jersey.config.server.provider.packages</param-name>
+  		<param-value>resource</param-value>
+  	</init-param>
+  	<init-param>
+  		<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+  		<param-value>true</param-value>
+  	</init-param>
+    <init-param>
+      <param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
+      <param-value>br.com.sga.api.config.CORSFilter</param-value>
+    </init-param>     	
+  	<load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>ServletAdaptor</servlet-name>
+  	<url-pattern>/rest/*</url-pattern>
+  </servlet-mapping>
+  <session-config>
+  	<session-timeout>30</session-timeout>
+  </session-config>
+  
 </web-app>
